@@ -58,10 +58,13 @@ import static com.proofpoint.http.client.Request.Builder.preparePost;
 import static com.proofpoint.http.client.Request.Builder.preparePut;
 import static com.proofpoint.testing.Assertions.assertLessThan;
 import static com.proofpoint.testing.Closeables.closeQuietly;
+import static com.proofpoint.tracetoken.TraceTokenManager.createAndRegisterNewRequestToken;
+import static com.proofpoint.tracetoken.TraceTokenManager.getCurrentRequestToken;
 import static com.proofpoint.units.Duration.nanosSince;
 import static java.lang.String.format;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
 import static java.util.concurrent.TimeUnit.SECONDS;
+import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.fail;
 
 public abstract class AbstractHttpClientTest
@@ -170,7 +173,7 @@ public abstract class AbstractHttpClientTest
         for (int i = 0; i < 100_000; i++) {
             try {
                 int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-                Assert.assertEquals(statusCode, 200);
+                assertEquals(statusCode, 200);
             }
             catch (Exception e) {
                 throw new Exception("Error on request " + i, e);
@@ -243,7 +246,7 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         Object expected = new Object();
-        Assert.assertEquals(executeRequest(config, request, new DefaultOnExceptionResponseHandler(expected)), expected);
+        assertEquals(executeRequest(config, request, new DefaultOnExceptionResponseHandler(expected)), expected);
     }
 
 
@@ -305,12 +308,12 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-        Assert.assertEquals(statusCode, 200);
-        Assert.assertEquals(servlet.requestMethod, "DELETE");
-        Assert.assertEquals(servlet.requestUri, uri);
-        Assert.assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
-        Assert.assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
-        Assert.assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
+        assertEquals(statusCode, 200);
+        assertEquals(servlet.requestMethod, "DELETE");
+        assertEquals(servlet.requestUri, uri);
+        assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
+        assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
+        assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
     }
 
     @Test
@@ -325,7 +328,7 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         String body = executeRequest(request, new ResponseToStringHandler());
-        Assert.assertEquals(body, "body text");
+        assertEquals(body, "body text");
     }
 
     @Test
@@ -341,18 +344,18 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-        Assert.assertEquals(statusCode, 200);
-        Assert.assertEquals(servlet.requestMethod, "GET");
+        assertEquals(statusCode, 200);
+        assertEquals(servlet.requestMethod, "GET");
         if (servlet.requestUri.toString().endsWith("=")) {
             // todo jetty client rewrites the uri string for some reason
-            Assert.assertEquals(servlet.requestUri, new URI(uri.toString() + "="));
+            assertEquals(servlet.requestUri, new URI(uri.toString() + "="));
         }
         else {
-            Assert.assertEquals(servlet.requestUri, uri);
+            assertEquals(servlet.requestUri, uri);
         }
-        Assert.assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
-        Assert.assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
-        Assert.assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
+        assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
+        assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
+        assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
     }
 
     @Test
@@ -370,16 +373,16 @@ public abstract class AbstractHttpClientTest
         Thread.sleep(1000);
         ListMultimap<String, String> headers3 = executeRequest(request, new ResponseHeadersHandler());
 
-        Assert.assertEquals(headers1.get("remotePort").size(), 1);
-        Assert.assertEquals(headers2.get("remotePort").size(), 1);
-        Assert.assertEquals(headers3.get("remotePort").size(), 1);
+        assertEquals(headers1.get("remotePort").size(), 1);
+        assertEquals(headers2.get("remotePort").size(), 1);
+        assertEquals(headers3.get("remotePort").size(), 1);
 
         int port1 = Integer.parseInt(headers1.get("remotePort").get(0));
         int port2 = Integer.parseInt(headers2.get("remotePort").get(0));
         int port3 = Integer.parseInt(headers3.get("remotePort").get(0));
 
-        Assert.assertEquals(port2, port1);
-        Assert.assertEquals(port3, port1);
+        assertEquals(port2, port1);
+        assertEquals(port3, port1);
         Assertions.assertBetweenInclusive(port1, 1024, 65535);
     }
 
@@ -396,12 +399,12 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-        Assert.assertEquals(statusCode, 200);
-        Assert.assertEquals(servlet.requestMethod, "POST");
-        Assert.assertEquals(servlet.requestUri, uri);
-        Assert.assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
-        Assert.assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
-        Assert.assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
+        assertEquals(statusCode, 200);
+        assertEquals(servlet.requestMethod, "POST");
+        assertEquals(servlet.requestUri, uri);
+        assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
+        assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
+        assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
     }
 
     @Test
@@ -417,12 +420,12 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-        Assert.assertEquals(statusCode, 200);
-        Assert.assertEquals(servlet.requestMethod, "PUT");
-        Assert.assertEquals(servlet.requestUri, uri);
-        Assert.assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
-        Assert.assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
-        Assert.assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
+        assertEquals(statusCode, 200);
+        assertEquals(servlet.requestMethod, "PUT");
+        assertEquals(servlet.requestUri, uri);
+        assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
+        assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
+        assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
     }
 
     @Test
@@ -440,13 +443,13 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-        Assert.assertEquals(statusCode, 200);
-        Assert.assertEquals(servlet.requestMethod, "PUT");
-        Assert.assertEquals(servlet.requestUri, uri);
-        Assert.assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
-        Assert.assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
-        Assert.assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
-        Assert.assertEquals(servlet.requestBytes, body);
+        assertEquals(statusCode, 200);
+        assertEquals(servlet.requestMethod, "PUT");
+        assertEquals(servlet.requestUri, uri);
+        assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
+        assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
+        assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
+        assertEquals(servlet.requestBytes, body);
     }
 
     @Test
@@ -472,13 +475,108 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-        Assert.assertEquals(statusCode, 200);
-        Assert.assertEquals(servlet.requestMethod, "PUT");
-        Assert.assertEquals(servlet.requestUri, uri);
-        Assert.assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
-        Assert.assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
-        Assert.assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
-        Assert.assertEquals(servlet.requestBytes, new byte[] {1, 2, 5});
+        assertEquals(statusCode, 200);
+        assertEquals(servlet.requestMethod, "PUT");
+        assertEquals(servlet.requestUri, uri);
+        assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
+        assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
+        assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
+        assertEquals(servlet.requestBytes, new byte[]{1, 2, 5});
+    }
+
+    @Test
+    public void testBodyGeneratorSeesTraceToken()
+            throws Exception
+    {
+        final String token = createAndRegisterNewRequestToken();
+        URI uri = baseURI.resolve("/road/to/nowhere");
+        Request request = preparePut()
+                .setUri(uri)
+                .addHeader("foo", "bar")
+                .addHeader("dupe", "first")
+                .addHeader("dupe", "second")
+                .setBodyGenerator(new BodyGenerator()
+                {
+                    @Override
+                    public void write(OutputStream out)
+                            throws Exception
+                    {
+                        assertEquals(getCurrentRequestToken(), token);
+                    }
+                })
+                .build();
+
+        int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
+        assertEquals(statusCode, 200);
+        assertEquals(servlet.requestMethod, "PUT");
+        assertEquals(servlet.requestUri, uri);
+        assertEquals(servlet.requestHeaders.get("foo"), ImmutableList.of("bar"));
+        assertEquals(servlet.requestHeaders.get("dupe"), ImmutableList.of("first", "second"));
+        assertEquals(servlet.requestHeaders.get("x-custom-filter"), ImmutableList.of("customvalue"));
+        assertEquals(servlet.requestBytes, new byte[] {});
+    }
+
+    @Test
+    public void testResponseHandlerExceptionSeesTraceToken()
+            throws Exception
+    {
+        final String token = createAndRegisterNewRequestToken();
+        int port = findUnusedPort();
+
+        HttpClientConfig config = new HttpClientConfig();
+        config.setConnectTimeout(new Duration(5, MILLISECONDS));
+
+        Request request = prepareGet()
+                .setUri(new URI(scheme, null, host, port, "/", null, null))
+                .build();
+
+        executeRequest(request, new ResponseHandler<Void, RuntimeException>()
+        {
+            @Override
+            public Void handleException(Request request, Exception exception)
+                    throws RuntimeException
+            {
+                assertEquals(getCurrentRequestToken(), token);
+                return null;
+            }
+
+            @Override
+            public Void handle(Request request, Response response)
+                    throws RuntimeException
+            {
+                fail("unexpected response");
+                return null;
+            }
+        });
+    }
+
+    @Test
+    public void testResponseHandlerResponseSeesTraceToken()
+            throws Exception
+    {
+        final String token = createAndRegisterNewRequestToken();
+        Request request = prepareGet()
+                .setUri(baseURI)
+                .build();
+
+        executeRequest(request, new ResponseHandler<Void, RuntimeException>()
+        {
+            @Override
+            public Void handleException(Request request, Exception exception)
+                    throws RuntimeException
+            {
+                fail("unexpected request exception", exception);
+                return null;
+            }
+
+            @Override
+            public Void handle(Request request, Response response)
+                    throws RuntimeException
+            {
+                assertEquals(getCurrentRequestToken(), token);
+                return null;
+            }
+        });
     }
 
     @Test
@@ -494,7 +592,7 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-        Assert.assertEquals(statusCode, 302);
+        assertEquals(statusCode, 302);
     }
 
     @Test
@@ -543,7 +641,7 @@ public abstract class AbstractHttpClientTest
                     .build();
 
             int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-            Assert.assertEquals(statusCode, 200);
+            assertEquals(statusCode, 200);
         }
         finally {
             server.stop();
@@ -576,7 +674,7 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         String body = executeRequest(request, new ResponseToStringHandler());
-        Assert.assertEquals(body, "body text");
+        assertEquals(body, "body text");
     }
 
     @Test
@@ -588,7 +686,7 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         String body = executeRequest(request, new ResponseToStringHandler());
-        Assert.assertEquals(body, "");
+        assertEquals(body, "");
     }
 
     @Test
@@ -599,8 +697,8 @@ public abstract class AbstractHttpClientTest
         servlet.responseHeaders.put("dupe", "first");
         servlet.responseHeaders.put("dupe", "second");
 
-        Assert.assertEquals(servlet.responseHeaders.get("foo"), ImmutableList.of("bar"));
-        Assert.assertEquals(servlet.responseHeaders.get("dupe"), ImmutableList.of("first", "second"));
+        assertEquals(servlet.responseHeaders.get("foo"), ImmutableList.of("bar"));
+        assertEquals(servlet.responseHeaders.get("dupe"), ImmutableList.of("first", "second"));
 
         Request request = prepareGet()
                 .setUri(baseURI)
@@ -608,8 +706,8 @@ public abstract class AbstractHttpClientTest
 
         ListMultimap<String, String> headers = executeRequest(request, new ResponseHeadersHandler());
 
-        Assert.assertEquals(headers.get("foo"), ImmutableList.of("bar"));
-        Assert.assertEquals(headers.get("dupe"), ImmutableList.of("first", "second"));
+        assertEquals(headers.get("foo"), ImmutableList.of("bar"));
+        assertEquals(headers.get("dupe"), ImmutableList.of("first", "second"));
     }
 
     @Test
@@ -622,7 +720,7 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         int statusCode = executeRequest(request, new ResponseStatusCodeHandler());
-        Assert.assertEquals(statusCode, 543);
+        assertEquals(statusCode, 543);
     }
 
     @Test
@@ -652,7 +750,7 @@ public abstract class AbstractHttpClientTest
             }
         });
 
-        Assert.assertEquals(statusMessage, "message");
+        assertEquals(statusMessage, "message");
     }
 
     @Test(expectedExceptions = UnexpectedResponseException.class)
@@ -676,7 +774,7 @@ public abstract class AbstractHttpClientTest
                 .build();
 
         String body = executeRequest(request, new ResponseToStringHandler());
-        Assert.assertEquals(body, "");
+        assertEquals(body, "");
         Assert.assertFalse(servlet.requestHeaders.containsKey("Accept-Encoding"));
     }
 
