@@ -6,6 +6,8 @@ Platform 1.11
     token state.
   - TraceTokenManager methods are now all static.
   - TraceTokenModule is no longer needed and has been deprecated.
+  - HttpClient now propagates the trace token to BodyGenerator and
+    ResponseHandler calls.
 
 * JAX-RS Query Parameter Parse Error Handling
 
